--- a/scrabble.html
+++ b/scrabble.html
@@ -15,7 +15,7 @@
 </ul>
 
 
-<h2>League of Legends champions<h2>
+<h2>League of Legends champions</h2>
 <ul>
 <li> SOL the fifth tone of the scale, also SO [n -S] </li>
 <li> BARD to cover a horse with armour, also BARDE [v -ED, -ING, -S]  </li>
